force-app/main/default/objects/vf_VolunteerRole__c/vf_VolunteerRole__c.object-meta.xml
<CustomObject>
    <label>Volunteer Role</label>
    <pluralLabel>Volunteer Roles</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Volunteer Role</label>
        <displayFormat>VOLROLE-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object to connect volunteers with roles (many-to-many)</description>
</CustomObject>