force-app/main/default/objects/vf_VolunteerRole__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <description>Date the volunteer ended this role</description>
    <inlineHelpText>The date when the volunteer ended this role (if applicable)</inlineHelpText>
</CustomField>