force-app/main/default/objects/vf_VolunteerRole__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <referenceTo>vf_Role__c</referenceTo>
    <relationshipLabel>Volunteer Roles</relationshipLabel>
    <relationshipName>VolunteerRoles</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <description>Role assigned to the volunteer</description>
    <inlineHelpText>The role assigned to this volunteer</inlineHelpText>
</CustomField>