force-app/main/default/objects/vf_VolunteerRole__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>Date the volunteer started in this role</description>
    <inlineHelpText>The date when the volunteer started in this role</inlineHelpText>
</CustomField>