force-app/main/default/objects/vf_VolunteerRole__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Volunteer Roles</relationshipLabel>
    <relationshipName>VolunteerRoles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <description>Volunteer assigned to the role</description>
    <inlineHelpText>The volunteer assigned to this role</inlineHelpText>
</CustomField>